# codecrafters-shell-c

./: CMakeLists.txt  README.md
src/: functions.h  main  main.c
